Change width of time in header to avoid "jumping"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,12 +91,16 @@ section > h2:first-child {
   opacity: 0.65;
   text-align: left;
   font-weight: 300;
-  border: 1px solid $gray;
-  padding: 2px 0;
+  border-bottom: 1px solid lighten($gray, 3%);
+  padding: 4px 0;
   display: flex;
   justify-content: space-evenly;
   // position: absolute;
   width: 100%;
+}
+
+.time {
+  width: 60px;
 }
 
 .day-of-week {
